5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1602_1015.log
== SUBMITION (2019-03-20 19:21:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1"))
varB=int(input("numero 2"))
varC=int(input("numero 3"))
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.128827
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 10
    totalA=(total menor-maior)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:22:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2":))
varC=int(input("numero 3":)
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- ERROR:
File "XXXX", line 5
    varB=int(input("numero 2":))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:22:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.154385
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:22:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- ERROR:
File "XXXX", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:22:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.144358
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:23:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- ERROR:
File "XXXX", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- ERROR:
File "XXXX", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- ERROR:
File "XXXX", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- ERROR:
File "XXXX", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:24:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.147812
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:25:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.199
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:32:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.165543
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:33:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.140727
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:33:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.15195
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:33:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.191466
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:33:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.0996869
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1602/1015/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:33:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.113236
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:33:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.108092
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:33:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.100138
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:33:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total=(varA+varB+varC)
menor=(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.124901
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total=(varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:33:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.140721
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:34:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
totalA= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.163004
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    totalA= (varA+varB+varC)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 10:25:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.155069
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:04:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.213917
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:12:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.265963
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:12:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.13105
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:12:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.118655
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:12:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.117097
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:12:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.186671
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:12:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.150327
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:12:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.174313
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:20:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.146744
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:20:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero 1:"))
varB=int(input("numero 2:"))
varC=int(input("numero 3:")
total= (varA+varB+varC)
menor= (min(varA,varB,varC))
maior= (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.119183
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 7
    total= (varA+varB+varC)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:28:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero1:"))
varB=int(input("numero3"))
varC=int(input("numero4"))
total=(varA+varB+varC)
menor =(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalA(total-menor-maior)
print(menor)
print(totalA)
print(maior)
-- EXECUTION TIME:
0.139321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 10, in <module>
    totalA(total-menor-maior)
NameError: name 'totalA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:31:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA=int(input("numero1:"))
varB=int(input("numero3"))
varC=int(input("numero4"))
total=(varA+varB+varC)
menor =(min(varA,varB,varC))
maior=(max(varA,varB,varC))
totalB=(total-menor-maior)
print(menor)
print(totalB)
print(maior)
-- EXECUTION TIME:
0.156486
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
